<?xml version="1.0"?>
<package>
  <name>phidgets_motion_control</name>
  <version>0.0.1</version>
  <description>Porting a few phidgets driver to jade</description>

  <maintainer email="kaz@clnb.io">Christopher Kazcmarek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>phidgets_api</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>phidgets_api</run_depend>
  <run_depend>tf</run_depend>
</package>
